# SampleMerge

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  main.cpp  mingw-toolchain.cmake
include/: SampleMerge.hpp  __SampleMerge_old.hpp
